handle signup, raw

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "barcamp-backend",
   "version": "0.0.1",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "elasticsearch": "^15.1.1",
     "express": "^4.16.3"
   }
